@@ -281,12 +281,12 @@ REFERENCES
               The Revised^4 Report on the Algorithmic Language Scheme.
 
           http://www.lulu.com/content/1010408
+          http://t3x.org/nmh/book-pdfs/scheme-9-from-empty-space.zip
               Scheme  9  from  Empty  Space -- A Guide to Implementing
               Scheme in C.
 
 AUTHOR
           Nils M Holm < nmh at t3x.org >
-
 
 
 
